@startuml db-diagram
!define table(x, alias) class "x" as alias << (T,#FFAAAA) >>
!define primary_key(keyName, type) //<color:Brown><#Gold:key:> **keyName** : type </color>//
!define index(keyName, type) //<:ledger:> **keyName** : type//
!define foreign_key(keyName, type) //<color:brown><#Green:key:> **keyName** : type</color>//
!define field(keyName, type) <color:black> + **keyName** : type</color>
hide methods
hide stereotypes

table("Books", Books) {
	primary_key(id, UUID)
	foreign_key(authorID, String)
	field(title, String)
	field(rating, Float)
	field(publish_date, Date)
	field(publisher, String)
}

table("Genres", Genres) {
	primary_key(id, UUID)
	field(title, string)
}

table("Authors", Authors) {
	primary_key(id, UUID)
	foreign_key(userId, UUID)
	foreign_key(bookID, UUID)
}

table("Users", Users) {
	primary_key(id, UUID)
	index(email, String - UNIQUE)
	field(full_name, String)
	field(date_of_birth, Date)
	field(created_at, Date)
	field(gender, "Enum(Male, Female)")
	field(followers, "Array[userId]")
	field(following, "Array[userId]")
	field(read_books, "Array[bookId]")
}


table("Reviews", Reviews) {
	primary_key(id, UUID)
	foreign_key(bookId, UUID)
	foreign_key(userId, UUID)
	field(rating, Float)
	field(detail, String)
	field(created_at, Date)
	field(updated_at, Date)
	field(comment, )
	field(child_comments, "Array[commentId]")
}

table("Comments", Comments) {
	primary_key(id, UUID)
	foreign_key(userId, UUID)
	foreign_key(parent_comment, uuid)
	field(created_at, Date)
	field(updated_at, Date)
	field(detail, String)
	field(child_comments, "Array[commentId]")
}

table("Assoc-Authors-Books", AAB) {
	foreign_key(authorID, UUID)
	foreign_key(bookID, UUID)
}

table("Assoc-Users-Reviews", AUR) {
	foreign_key(userId, UUID)
	foreign_key(reviewId, UUID)
}

table("Assoc-Reviews-Books", ARB) {
	foreign_key(bookId, UUID)
	foreign_key(reviewId, UUID)
}

table("Assoc-Genres-Books", AGB) {
	foreign_key(bookId, UUID)
	foreign_key(genreId, UUID)
}

Books::id o--{ AAB::bookID
Authors::id o--{ AAB::authorId

Users::id o--{ AUR::userId
Reviews::id o--{ AUR::reviewId

Books::id o-l-{ ARB::bookId
Reviews::id o--{ ARB::reviewId

Users::id }--o Users::followers
Users::id }--o Users::following

Authors::userId o--o Users::id

Books::id o--{ AGB::bookId
Genres::id o--{ AGB::genreId
Users::readed_books o--{ Books::id

Comments::id }--o Comments::child_comments
Comments::id o--o Comments::parent_comment
Comments::userId }--o Users::id

Reviews::comments o--{ Comments::id
@enduml
